# snappysense

./: .gitignore  BACKGROUND.md  CONFIG.md  LOW-POWER.md  MQTT-PROTOCOL.md  OPINIONS.md  POST-MORTEM.md  README.md  TODO.md  UX-LOGIC.md  UX.md  platformio.ini
aws/: DATA-MODEL.md  FRONTEND.md  IOT-THINGS.md  MQTT-PROTOCOL.md  README.md  SETUP.md  TODO.md  snappy_lambda_role.json  snappysense-demo-data.sh  thing_policy.json
aws-iot-backend/: DATA-MODEL.md  DESIGN.md  MQTT-PROTOCOL.md  README.md  TODO.md  db_lambda.py  echo_lambda.py  index.html  snappy.js  snappy_lambda_role.json  snappysense-demo-data.sh  snp_1_1_no_1.json  snp_1_1_no_2.json
aws-lambda-frontend/: Makefile  README.md  index.html  lambda_function.py  snappy.js
firmware-arduino/: CMakeLists.txt  MANUAL.md  README.md  config.cpp  configuration_template.txt  development_config_template.txt  device.h  icons.h  log.cpp  main.h  microtask.cpp  mqtt_upload.h  network.h  piezo.cpp  platformio.ini  sdkconfig.defaults  sdkconfig.featheresp32  sensor.h  web_upload.cpp
firmware-idf/: CMakeLists.txt  MANUAL.md  README.md  sdkconfig
firmware-idf/main/: CMakeLists.txt  SENSORS.md  bitmaps.c  bitmaps.h  config.c  device.c  device.h  dfrobot_sen0487.c  dfrobot_sen0487.h  dfrobot_sen0500.c  dfrobot_sen0500.h  dfrobot_sen0514.c  dfrobot_sen0514.h  esp32_i2c.c  esp32_i2c.h  esp32_ledc_piezo.c  esp32_ledc_piezo.h  factory_config.c  factory_config.h  fonts.c  fonts.h  framebuf.c  framebuf.h  i2c_common.c  i2c_common.h  main.c  main.h  oled.c  oled.h  piezo.c  piezo.h  resources.c  resources.h  sampler.c  sampler.h  sensor.c  sensor.h  slideshow.c  slideshow.h  snappy_i2c.c  (+10 more)
music-compiler/: go.mod  main.go  main.go~  musiccomp  samples.txt
server/: README.md  httpsrv.go
(+165 files in other folders)
